syntax = "proto3";

package pb;

//import "google/protobuf/timestamp.proto";

message Example {
    int32 id = 1;
    string example_id = 2;
    string example_name = 3;
    string status = 4;
    string create_time = 5;
}

message GetRequest {
    string id = 1;
}

service ExampleService {
    rpc Get(GetRequest) returns (Example) {}
}